<resources>
    <string name="app_name">SweetSlice</string>
    <string name="search"> Search </string>
    <string name="sweetslice">SweetSlice</string>
    <string name="order_your_favorite_cake">Order Your Favorite Cake !!</string>
    <string name="all">All</string>
    <string name="combos">Combos</string>
    <string name="sliders">Sliders</string>
    <string name="classic">Classic</string>
    <string name="coffee_cake">Coffee Cake</string>
    <string name="_4_5">4.5</string>
    <string name="coffee_cake_is_a_soft_moist_and_buttery_cake_that_is_often_topped_with_a_crumbly_streusel_topping_made_from_cinnamon_sugar_and_butter_despite_its_name_it_doesn_t_usually_contain_coffee_instead_it_s_meant_to_be_enjoyed_with_a_cup_of_coffee_as_a_delicious_breakfast_or_snack_some_variations_do_include_coffee_flavor_in_the_batter_or_icing">Coffee Cake is a soft, moist, and buttery cake that is often topped with a crumbly streusel topping made from cinnamon, sugar, and butter. Despite its name, it doesn’t usually contain coffee; instead, it’s meant to be enjoyed with a cup of coffee as a delicious breakfast or snack. Some variations do include coffee flavor in the batter or icing.</string>
    <string name="portion">Portion</string>
    <string name="rs_5000">Rs.5000/=</string>
    <string name="order_now">ORDER NOW</string>
    <string name="cheese_cake">Cheese Cake</string>
    <string name="_4_8">4.8</string>
    <string name="cheesecake_is_a_rich_creamy_and_decadent_dessert_made_with_a_smooth_cream_cheese_filling_over_a_buttery_cookie_or_graham_cracker_crust_it_comes_in_many_variations_from_classic_new_york_style_to_fruity_chocolatey_or_no_bake_versions_the_texture_is_silky_and_dense_with_a_perfect_balance_of_sweetness_and_slight_tanginess">Cheesecake is a rich, creamy, and decadent dessert made with a smooth cream cheese filling over a buttery cookie or graham cracker crust. It comes in many variations, from classic New York-style to fruity, chocolatey, or no-bake versions. The texture is silky and dense, with a perfect balance of sweetness and slight tanginess.</string>
    <string name="rs_4000">Rs.4000/=</string>
    <string name="carrot_cake">Carrot Cake</string>
    <string name="carrot_cake_is_a_moist_spiced_cake_made_with_grated_carrots_giving_it_a_naturally_sweet_and_tender_texture_the_carrots_blend_seamlessly_into_the_batter_adding_moisture_without_overpowering_the_flavor_it_is_often_enhanced_with_warm_spices_like_cinnamon_nutmeg_and_ginger_creating_a_rich_and_aromatic_taste">Carrot Cake is a moist, spiced cake made with grated carrots, giving it a naturally sweet and tender texture. The carrots blend seamlessly into the batter, adding moisture without overpowering the flavor. It is often enhanced with warm spices like cinnamon, nutmeg, and ginger, creating a rich and aromatic taste.</string>
    <string name="rs_2400">Rs.2400/=</string>
    <string name="red_velvet_cake">Red Velvet Cake</string>
    <string name="_4_9">4.9</string>
    <string name="red_velvet_cake_is_a_classic_visually_stunning_dessert_known_for_its_deep_red_color_soft_texture_and_rich_velvety_taste_this_cake_is_made_with_a_blend_of_cocoa_powder_buttermilk_and_vinegar_giving_it_a_slightly_tangy_and_chocolaty_flavor_the_vibrant_red_hue_is_traditionally_achieved_using_red_food_coloring_or_natural_alternatives_like_beetroot_powder">Red Velvet Cake is a classic, visually stunning dessert known for its deep red color, soft texture, and rich, velvety taste. This cake is made with a blend of cocoa powder, buttermilk, and vinegar, giving it a slightly tangy and chocolaty flavor. The vibrant red hue is traditionally achieved using red food coloring or natural alternatives like beetroot powder.</string>
    <string name="rs_3000">Rs.3000/=</string>
    <string name="wedding_cake">Wedding Cake</string>
    <string name="the_wedding_cake_is_a_symbol_of_elegance_and_love_crafted_to_make_your_special_day_unforgettable_with_its_towering_tiers_of_moist_flavorful_cake_layers_it_s_beautifully_adorned_with_intricate_designs_delicate_fondant_and_romantic_floral_accents_whether_classic_vanilla_rich_chocolate_or_any_flavor_of_your_choice_this_cake_is_as_stunning_as_it_is_delicious_a_masterpiece_that_adds_a_touch_of_sweetness_to_your_happily_ever_after">The Wedding Cake is a symbol of elegance and love, crafted to make your special day unforgettable. With its towering tiers of moist, flavorful cake layers, it\'s beautifully adorned with intricate designs, delicate fondant, and romantic floral accents. Whether classic vanilla, rich chocolate, or any flavor of your choice, this cake is as stunning as it is delicious—a masterpiece that adds a touch of sweetness to your happily ever after.</string>
    <string name="happy_birthday_icing_cake">Happy Birthday Icing Cake</string>
    <string name="the_happy_birthday_cake_is_a_delightful_centerpiece_for_any_celebration_baked_to_perfection_with_soft_fluffy_layers_it_s_adorned_with_creamy_colorful_frosting_and_festive_decorations_that_bring_joy_to_every_occasion_topped_with_sprinkles_candles_or_a_personal_touch_this_cake_is_as_sweet_and_memorable_as_the_wishes_it_represents_a_delicious_way_to_make_any_birthday_extra_special">The Happy Birthday Cake is a delightful centerpiece for any celebration! Baked to perfection with soft, fluffy layers, it’s adorned with creamy, colorful frosting and festive decorations that bring joy to every occasion. Topped with sprinkles, candles, or a personal touch, this cake is as sweet and memorable as the wishes it represents—a delicious way to make any birthday extra special!</string>
    <string name="chocalate_cake">Chocalate Cake</string>
    <string name="the_chocolate_cake_is_a_classic_indulgence_that_satisfies_every_chocolate_lover_s_cravings_made_with_layers_of_soft_moist_chocolate_sponge_it_s_coated_in_a_velvety_chocolate_frosting_that_melts_in_your_mouth_each_bite_offers_a_rich_deep_cocoa_flavor_that_s_perfectly_balanced_with_just_the_right_amount_of_sweetness_a_timeless_dessert_for_any_occasion">The Chocolate Cake is a classic indulgence that satisfies every chocolate lover\'s cravings. Made with layers of soft, moist chocolate sponge, it\'s coated in a velvety chocolate frosting that melts in your mouth. Each bite offers a rich, deep cocoa flavor that’s perfectly balanced with just the right amount of sweetness—a timeless dessert for any occasion.</string>
    <string name="black_forest_cake">Black Forest Cake</string>
    <string name="the_black_forest_cake_is_a_timeless_dessert_that_delivers_a_symphony_of_flavors_in_every_slice_made_with_layers_of_rich_moist_chocolate_sponge_cake_it_s_generously_filled_with_luscious_whipped_cream_and_sweet_tart_cherries_topped_with_smooth_chocolate_shavings_and_vibrant_cherries_this_cake_is_a_decadent_treat_that_perfectly_balances_sweetness_and_a_hint_of_fruity_tang">The Black Forest Cake is a timeless dessert that delivers a symphony of flavors in every slice. Made with layers of rich, moist chocolate sponge cake, it\'s generously filled with luscious whipped cream and sweet-tart cherries. Topped with smooth chocolate shavings and vibrant cherries, this cake is a decadent treat that perfectly balances sweetness and a hint of fruity tang.</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address_and_we_ll_send_you_instructions_to_reset_your_password">Enter your email address and we\'ll send you instructions to reset your password.</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="return_to_login">Return to Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_details_to_continue">Enter your details to continue</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="skip">Skip</string>
    <string name="next">Next ➡️</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
    <string name="rs_2500">Rs.2500</string>
    <string name="taxes">Taxes</string>
    <string name="rs_200">Rs.200</string>
    <string name="delivery_fees">Delivery fees</string>
    <string name="rs_500">Rs.500</string>
    <string name="total">TOTAL:</string>
    <string name="rs_2700">Rs.2700</string>
    <string name="estimated_delivery_time">Estimated delivery time:</string>
    <string name="_3_5_hours">3 - 5 hours</string>
    <string name="payment_methods">Payment methods</string>
    <string name="credit_card_n5105_0505">Credit card\n5105 **** **** 0505</string>
    <string name="debit_card_n3566_0505">Debit card\n3566 **** **** 0505</string>
    <string name="save_card_details_for_future_payments">Save card details for future payments</string>
    <string name="pay_now">Pay Now</string>
    <string name="name">Name :</string>
    <string name="chamika_shashipriya">Chamika Shashipriya</string>
    <string name="e_mail">E-mail :</string>
    <string name="chamikashashipriya3_gmail_com">chamikashashipriya3@gmail.com</string>
    <string name="adderess">Adderess :</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="ambalangoda_galle_sri_lanka">Ambalangoda, Galle, Sri-Lanka</string>
    <string name="payment_history">Payment History</string>
    <string name="order_history">Order history</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="create_account">Create Account</string>
    <string name="get_started_with_sweetslice">Get started with SweetSlice</string>
    <string name="first_name">First Name :</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last Name :</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="create_a_password">Create a password</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="success">Success !</string>
    <string name="your_payment_was_successful_na_receipt_for_this_purchase_has_nbeen_sent_to_your_email">Your payment was successful.\nA receipt for this purchase has\nbeen sent to your email.</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_sweet_delights">Welcome to Sweet Delights</string>
    <string name="indulge_in_freshly_baked_goodness_order_delicious_cakes_made_with_love_right_at_your_fingertips">Indulge in freshly baked goodness! Order delicious cakes, made with love, right at your fingertips.</string>
</resources>